# AdventOfCode2023

./: .gitignore  Advent2023.nb  CMakeLists.txt  README.md  notes.md
day1/: CMakeLists.txt  main.cpp
day10/: CMakeLists.txt  main.cpp
day10part2/: CMakeLists.txt  main.cpp
day11/: CMakeLists.txt  main.cpp
day11part2/: CMakeLists.txt  main.cpp
day12/: CMakeLists.txt  main.cpp
day12part2/: CMakeLists.txt  main.cpp
day13/: CMakeLists.txt  main.cpp
day13part2/: CMakeLists.txt  main.cpp
day14/: CMakeLists.txt  main.cpp
day14part2/: CMakeLists.txt  main.cpp
day15/: CMakeLists.txt  main.cpp
day15part2/: CMakeLists.txt  main.cpp
day16/: CMakeLists.txt  main.cpp
day16part2/: CMakeLists.txt  main.cpp
day17/: CMakeLists.txt  main.cpp
day17part2/: CMakeLists.txt  main.cpp
day1part2/: CMakeLists.txt  main.cpp
day2/: CMakeLists.txt  main.cpp
day21/: CMakeLists.txt  main.cpp
day21part2/: CMakeLists.txt  main.cpp
day23/: CMakeLists.txt  main.cpp
day23part2/: CMakeLists.txt  main.cpp
day2part2/: CMakeLists.txt  main.cpp
day3/: CMakeLists.txt  main.cpp
day3part2/: CMakeLists.txt  main.cpp
day4/: CMakeLists.txt  main.cpp
day4part2/: CMakeLists.txt  main.cpp
day5/: CMakeLists.txt  main.cpp
day5part2/: CMakeLists.txt
day6/: CMakeLists.txt  main.cpp
day7/: CMakeLists.txt  main.cpp
day7part2/: CMakeLists.txt  main.cpp
day8/: CMakeLists.txt  main.cpp
day8part2/: CMakeLists.txt  main.cpp
