
cmake_minimum_required(VERSION 3.5)

project(advent2023)

add_subdirectory(day1)

add_subdirectory(day1part2)

add_subdirectory(day2)

add_subdirectory(day2part2)

add_subdirectory(day3)

add_subdirectory(day3part2)

add_subdirectory(day4)

add_subdirectory(day4part2)

add_subdirectory(day5)

add_subdirectory(day5part2)

add_subdirectory(day6)

add_subdirectory(day7)

add_subdirectory(day7part2)

add_subdirectory(day8)

add_subdirectory(day8part2)

add_subdirectory(day10)

add_subdirectory(day10part2)

add_subdirectory(day11)

add_subdirectory(day11part2)

add_subdirectory(day12)

add_subdirectory(day12part2)

add_subdirectory(day13)

add_subdirectory(day13part2)
